# computer

./: CMakeLists.txt
DesignPattern/: CMakeLists.txt  Main.qml  main.cpp
build-modernGUI-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/modernGUI_autogen/: mocs_compilation.cpp
c++/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainapplication.cpp  mainapplication.h  mainwindow.cpp  mainwindow.h  menumodel.cpp  menumodel.h  window.glade  window.glade~  window.h
c++/assets/: window.glade  window.glade~
c++/basic/: define.cpp  define.h  getline.cpp  getline.h  limits.cpp  limits.h  pointer.cpp  pointer.h  random.cpp  random.h  time.cpp  time.h
c++/framework/: chapter.h  factory.cpp  factory.h  identifier.h  product.cpp  product.h  singleton.cpp  singleton.h
c++/keyword/: auto.cpp  auto.h  const.cpp  const.h  decltype.cpp  decltype.h  keyword.cpp  keyword.h  nullptr.cpp  nullptr.h  tuple.cpp  tuple.h
c++/resources/: window.glade
modernGUI/: CMakeLists.txt  aa.qmodel  main.cpp  main.qml  qml.qrc
modernGUI/Bridge/: audicar.cpp  audicar.h  benzcar.cpp  benzcar.h  bev.cpp  bev.h  bmwcar.cpp  bmwcar.h  bridge.cpp  bridge.h  bridge.qmodel  car.cpp  car.h  electricengine.cpp  electricengine.h  engine.h  fuelengine.cpp  fuelengine.h  hybridengine.cpp  hybridengine.h  iceengine.cpp  iceengine.h
